2004-04-10  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: cleanup the delete line func.

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorBuffer.cs:
	* CodeCompletionCompletionWindow.cs:
	add atomic undo on code completion, cause its scary now.

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorBuffer.cs:
	* Gui/SourceEditorView.cs:
	* CodeCompletion/ICompletionData.cs:
	* CodeCompletion/CodeCompletionData.cs:
	* CodeCompletion/CompletionWindow.cs:
	* CodeCompletion/CommentCompletionDataProvider.cs:
	* CodeCompletion/TemplateCompletionDataProvider.cs:
	add support for xcode style type ahead completion. It looks cool, and
	is actually pretty useful.
	

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs:
	* Gui/SourceEditorDisplayBinding.cs: attempt to solve gtk+ threading
	issues

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/ReplaceInFilesDialog.cs:
	* Gui/SourceEditorView.cs:
	* Gui/Pads/CompilerMessageView.cs:
	* Gui/OptionPanels/BehaviorTextEditorPanel.cs:
	* Gui/OptionPanels/MarkersTextEditorPanel.cs:
	* Gui/OptionPanels/CodeTemplatePanel.cs:
	* Gui/OptionPanels/GeneralTextEditorPanel.cs:
	* Gui/SourceEditorDisplayBinding.cs:
	* Search/SearchReplaceManager.cs:
	* Search/SearchReplaceInFilesManager.cs:
	gettextify

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Commands/ToolCommands.cs:
	* Gui/Dialogs/ReplaceDialog.cs:
	* Gui/Dialogs/EditTemplateGroupDialog.cs:
	Gettextify

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* CodeCompletion/TextUtilities.cs: if we are already caching the string
	might as well use it.

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorDisplayBinding.cs: second half of the double clicking
	not setting focus properly, in specific this is a gtk+ 2.4 regression,
	bug filed: http://bugzilla.gnome.org/show_bug.cgi?id=138458

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorDisplayBinding.cs: properly mark IsReadOnly